syntax = "proto3";
package malware.scan;

option java_package = "com.symphony.malware.scan";
option java_generic_services = true;
option java_outer_classname = "AttachmentData";

message AttachmentMeta {
    string content_type = 2;
    string name = 3;
    string file_id = 4;
    int64 creator_id = 5;
}

